--- a/web/web_scraping.ipynb
+++ b/web/web_scraping.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "id": "452d2a30",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "id": "8e1f203c",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "id": "6c086aa2",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "id": "b2b4f8ec",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "id": "ddc55730",
    "metadata": {},
    "outputs": [
@@ -59,7 +59,7 @@
        "b''"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "id": "4f414db8",
    "metadata": {},
    "outputs": [],
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "id": "80d65a2d",
    "metadata": {},
    "outputs": [
@@ -92,7 +92,7 @@
        "\"use strict\";var SITE_SPEED=SITE_SPEED||{};SITE_SPEED.ATF_TIMER={measure:function(t){t.setAttribute(\"data-atftimer\",Date.now())}};</script></div>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "id": "d73dae44",
    "metadata": {},
    "outputs": [
@@ -113,7 +113,7 @@
        "['Title', 'Price', 'Itemlocation']"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,133 +126,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "17a32b96",
+   "execution_count": 9,
+   "id": "e24d90bc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "defaultdict(list,\n",
-       "            {'s-item__title': ['Shop on eBay',\n",
-       "              \"PS5 Marvel's Spider-Man 2 Limited Edition DualSense Controller Console Cover\",\n",
-       "              'PS5 Sony PlayStation 5 Console Disc Version!',\n",
-       "              'New ListingPS5 Sony PlayStation 5 Console Disc Version!',\n",
-       "              'PlayStation 5 Digital Console Cover Marvels Spider-Man 2 Limited Edition SEALED',\n",
-       "              'PlayStation5 Console Horizon Forbidden West Bundle',\n",
-       "              'Sony PS5 Blu-Ray Edition Console Spider-Man 2 Limited Edition Bundle',\n",
-       "              'SONY PS5 - PLAYSTATION 5 - SYSTEM - DISC - CFI-1115A (CGH027992)',\n",
-       "              'PlayStation 5 Digital Edition God of War Ragnarok Bundle',\n",
-       "              'Sony PlayStation 5 825GB Digital Edition Home Console - White',\n",
-       "              'Sony Playstation 5 Disc Version Console with Dual Charging Dock Station Bundle',\n",
-       "              'Sony PS5 Blu-Ray Edition Console - White',\n",
-       "              'Sony PlayStation 5 Digital Edition PS5 Brand New Sealed On Hand Ready to Ship',\n",
-       "              'New ListingPS5 Console Horizon Forbidden West Bundle NEW/SEALED',\n",
-       "              'Sony - PlayStation 5 Console Only - Used - Blu-Ray Edition',\n",
-       "              'Sony Playstation 5 Disc Version with Extra Controller, Charging Station Bundle',\n",
-       "              '(READ DESCRIPTION) Sony PlayStation 5 Disc Edition 825GB Home Console - White',\n",
-       "              'Sony Playstation 5 Disc Version (PS5 Disc) Video Game Console (READ DESCRIPTION)',\n",
-       "              'Sony PS5 Playstation 5 Console Spider-Man 2 Limited Edition Bundle BRAND NEW!',\n",
-       "              'Sony Playstation 5 Disc Version (PS5 Disc) Video Game Console Ready to Ship!',\n",
-       "              'Playstation 5 Digital Edition Console (Crashes When Loading Games)',\n",
-       "              'Sony Playstation 5 Disc Edition 825GB White CFI-1015A',\n",
-       "              'PlayStation 5 Console - Includes PS5 Console And DualSense Controller - 16GB RAM',\n",
-       "              'Sony Playstation 5 825GB Console (Disk Version) CFI-1015A - White',\n",
-       "              'Sony PlayStation 5 825GB Digital Console',\n",
-       "              'PlayStation 5 Console FINAL FANTASY XVI - **READ**',\n",
-       "              'Playstation 5 Console Disc Version New',\n",
-       "              'SPIDER-MAN 2  PLAYSTATION 5 DISC CONSOLE COVER AND CONTROLLER BUNDLE - LIMITED',\n",
-       "              'Playstation 5 Console Disc Version - Brand Spankin New',\n",
-       "              'New Listing(Sony) Playstation5 CFI-1200A01 Used',\n",
-       "              'PLAYSTATION 5 CONSOLE --**DISC EDITION**-- BRAND NEW IN BOX ',\n",
-       "              'Sony PS5 Blu-Ray Edition Console -with 5 Games Bundle ',\n",
-       "              'SONY PS Vita Black console PCH 2000 ZA11 Play Station NTSC-J Japan Excellent +'],\n",
-       "             's-item__price': ['20.00',\n",
-       "              '132.99 to $880.99',\n",
-       "              '449.99',\n",
-       "              '350.00',\n",
-       "              '174.99',\n",
-       "              '499.99',\n",
-       "              '699.99',\n",
-       "              '375.00',\n",
-       "              '459.00',\n",
-       "              '375.00',\n",
-       "              '507.99',\n",
-       "              '180.50',\n",
-       "              '529.00',\n",
-       "              '356.87',\n",
-       "              '385.89',\n",
-       "              '563.99',\n",
-       "              '250.00',\n",
-       "              '197.50',\n",
-       "              '660.00',\n",
-       "              '497.99',\n",
-       "              '209.99',\n",
-       "              '250.00',\n",
-       "              '499.99',\n",
-       "              '375.00',\n",
-       "              '350.00',\n",
-       "              '300.00',\n",
-       "              '609.95',\n",
-       "              '284.98',\n",
-       "              '450.00',\n",
-       "              '693.59',\n",
-       "              '458.76',\n",
-       "              '799.99',\n",
-       "              '119.99'],\n",
-       "             's-item__location': ['from Japan',\n",
-       "              'from United States',\n",
-       "              'from United States',\n",
-       "              'from United States',\n",
-       "              'from United States',\n",
-       "              'from United States',\n",
-       "              'from United States',\n",
-       "              'from United States',\n",
-       "              'from United States',\n",
-       "              'from United States',\n",
-       "              'from United States',\n",
-       "              'from United States',\n",
-       "              'from United States',\n",
-       "              'from United States',\n",
-       "              'from United States',\n",
-       "              'from United States',\n",
-       "              'from United States',\n",
-       "              'from United States',\n",
-       "              'from United States',\n",
-       "              'from United States',\n",
-       "              'from United States',\n",
-       "              'from United States',\n",
-       "              'from United States',\n",
-       "              'from United States',\n",
-       "              'from United States',\n",
-       "              'from United States',\n",
-       "              'from United States',\n",
-       "              'from United States',\n",
-       "              'from Japan',\n",
-       "              'from Canada',\n",
-       "              'from United States',\n",
-       "              'from Japan']})"
+       "[<div class=\"s-item__title\"><span aria-level=\"3\" role=\"heading\"><!--F#f_0-->Shop on eBay<!--F/--></span></div>,\n",
+       " <span class=\"s-item__price\"><!--F#f_0--><!--F#f_0-->$20.00<!--F/--><!--F/--></span>]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "item_info = page_ebay_soup.findAll(\"div\", class_ = \"s-item__info\")\n",
+    "item_info[0].select(\"div.s-item__title, span.s-item__price, span.s-item__location\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "17a32b96",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from collections import defaultdict\n",
-    "all_pages = page_ebay_soup.select(\"div.s-item__title, span.s-item__price, span.s-item__location\")\n",
-    "\n",
     "\n",
     "items_list = defaultdict(list)\n",
     "\n",
+    "def get_pages(page):\n",
+    "    page_items = page.select(\"div.s-item__title, span.s-item__price, span.s-item__location\")\n",
+    "    if len(page_items) == len(items_to_extract):\n",
+    "        for item in page_items:\n",
+    "            if item.get(\"class\")[0] == \"s-item__title\":\n",
+    "                items_list[item.get(\"class\")[0]].append(item.span.text)\n",
+    "            else:\n",
+    "                items_list[item.get(\"class\")[0]].append(item.text.strip(\"$\"))\n",
+    "    \n",
     "\n",
-    "for item in all_pages:\n",
-    "    if item.get(\"class\")[0] == \"s-item__title\":\n",
-    "        items_list[item.get(\"class\")[0]].append(item.span.text)\n",
-    "    else:\n",
-    "        items_list[item.get(\"class\")[0]].append(item.text.strip(\"$\"))\n",
-    "items_list"
+    "# all_pages = page_ebay_soup.select(\"div.s-item__title, span.s-item__price, span.s-item__location\")\n",
+    "\n",
+    "\n",
+    "# items_list = defaultdict(list)\n",
+    "\n",
+    "\n",
+    "# for item in all_pages:\n",
+    "#     if item.get(\"class\")[0] == \"s-item__title\":\n",
+    "#         items_list[item.get(\"class\")[0]].append(item.span.text)\n",
+    "#     else:\n",
+    "#         items_list[item.get(\"class\")[0]].append(item.text.strip(\"$\"))\n",
+    "list(map(get_pages, item_info)) #\n",
+    "items_list['s-item__price'] = pd.to_numeric(items_list['s-item__price'], errors='coerce')\n",
+    "df = pd.DataFrame(dict(items_list))\n",
+    "df.columns = cols\n",
+    "df.dropna(inplace=True)\n",
+    "df.reset_index(drop=True, inplace=True)\n",
+    "df.to_csv(\"ps5.csv\", index=False)"
    ]
   },
   {
@@ -299,181 +232,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "id": "34ea7c4d",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['20.00',\n",
-       " '132.99 to $880.99',\n",
-       " '449.99',\n",
-       " '350.00',\n",
-       " '174.99',\n",
-       " '499.99',\n",
-       " '699.99',\n",
-       " '375.00',\n",
-       " '459.00',\n",
-       " '375.00',\n",
-       " '507.99',\n",
-       " '180.50',\n",
-       " '529.00',\n",
-       " '356.87',\n",
-       " '385.89',\n",
-       " '563.99',\n",
-       " '250.00',\n",
-       " '197.50',\n",
-       " '660.00',\n",
-       " '497.99',\n",
-       " '209.99',\n",
-       " '250.00',\n",
-       " '499.99',\n",
-       " '375.00',\n",
-       " '350.00',\n",
-       " '300.00',\n",
-       " '609.95',\n",
-       " '284.98',\n",
-       " '450.00',\n",
-       " '693.59',\n",
-       " '458.76',\n",
-       " '799.99',\n",
-       " '119.99']"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "items_list['s-item__price']"
+    "# items_list['s-item__price']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "id": "d1d22fae",
    "metadata": {},
    "outputs": [],
    "source": [
-    "items_list['s-item__price'] = pd.to_numeric(items_list['s-item__price'], errors='coerce')"
+    "# items_list['s-item__price'] = pd.to_numeric(items_list['s-item__price'], errors='coerce')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 23,
    "id": "09fdc7b9",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[['Shop on eBay',\n",
-       "  \"PS5 Marvel's Spider-Man 2 Limited Edition DualSense Controller Console Cover\",\n",
-       "  'PS5 Sony PlayStation 5 Console Disc Version!',\n",
-       "  'New ListingPS5 Sony PlayStation 5 Console Disc Version!',\n",
-       "  'PlayStation 5 Digital Console Cover Marvels Spider-Man 2 Limited Edition SEALED',\n",
-       "  'PlayStation5 Console Horizon Forbidden West Bundle',\n",
-       "  'Sony PS5 Blu-Ray Edition Console Spider-Man 2 Limited Edition Bundle',\n",
-       "  'SONY PS5 - PLAYSTATION 5 - SYSTEM - DISC - CFI-1115A (CGH027992)',\n",
-       "  'PlayStation 5 Digital Edition God of War Ragnarok Bundle',\n",
-       "  'Sony PlayStation 5 825GB Digital Edition Home Console - White',\n",
-       "  'Sony Playstation 5 Disc Version Console with Dual Charging Dock Station Bundle',\n",
-       "  'Sony PS5 Blu-Ray Edition Console - White',\n",
-       "  'Sony PlayStation 5 Digital Edition PS5 Brand New Sealed On Hand Ready to Ship',\n",
-       "  'New ListingPS5 Console Horizon Forbidden West Bundle NEW/SEALED',\n",
-       "  'Sony - PlayStation 5 Console Only - Used - Blu-Ray Edition',\n",
-       "  'Sony Playstation 5 Disc Version with Extra Controller, Charging Station Bundle',\n",
-       "  '(READ DESCRIPTION) Sony PlayStation 5 Disc Edition 825GB Home Console - White',\n",
-       "  'Sony Playstation 5 Disc Version (PS5 Disc) Video Game Console (READ DESCRIPTION)',\n",
-       "  'Sony PS5 Playstation 5 Console Spider-Man 2 Limited Edition Bundle BRAND NEW!',\n",
-       "  'Sony Playstation 5 Disc Version (PS5 Disc) Video Game Console Ready to Ship!',\n",
-       "  'Playstation 5 Digital Edition Console (Crashes When Loading Games)',\n",
-       "  'Sony Playstation 5 Disc Edition 825GB White CFI-1015A',\n",
-       "  'PlayStation 5 Console - Includes PS5 Console And DualSense Controller - 16GB RAM',\n",
-       "  'Sony Playstation 5 825GB Console (Disk Version) CFI-1015A - White',\n",
-       "  'Sony PlayStation 5 825GB Digital Console',\n",
-       "  'PlayStation 5 Console FINAL FANTASY XVI - **READ**',\n",
-       "  'Playstation 5 Console Disc Version New',\n",
-       "  'SPIDER-MAN 2  PLAYSTATION 5 DISC CONSOLE COVER AND CONTROLLER BUNDLE - LIMITED',\n",
-       "  'Playstation 5 Console Disc Version - Brand Spankin New',\n",
-       "  'New Listing(Sony) Playstation5 CFI-1200A01 Used',\n",
-       "  'PLAYSTATION 5 CONSOLE --**DISC EDITION**-- BRAND NEW IN BOX ',\n",
-       "  'Sony PS5 Blu-Ray Edition Console -with 5 Games Bundle ',\n",
-       "  'SONY PS Vita Black console PCH 2000 ZA11 Play Station NTSC-J Japan Excellent +'],\n",
-       " array([ 20.  ,    nan, 449.99, 350.  , 174.99, 499.99, 699.99, 375.  ,\n",
-       "        459.  , 375.  , 507.99, 180.5 , 529.  , 356.87, 385.89, 563.99,\n",
-       "        250.  , 197.5 , 660.  , 497.99, 209.99, 250.  , 499.99, 375.  ,\n",
-       "        350.  , 300.  , 609.95, 284.98, 450.  , 693.59, 458.76, 799.99,\n",
-       "        119.99]),\n",
-       " ['from Japan',\n",
-       "  'from United States',\n",
-       "  'from United States',\n",
-       "  'from United States',\n",
-       "  'from United States',\n",
-       "  'from United States',\n",
-       "  'from United States',\n",
-       "  'from United States',\n",
-       "  'from United States',\n",
-       "  'from United States',\n",
-       "  'from United States',\n",
-       "  'from United States',\n",
-       "  'from United States',\n",
-       "  'from United States',\n",
-       "  'from United States',\n",
-       "  'from United States',\n",
-       "  'from United States',\n",
-       "  'from United States',\n",
-       "  'from United States',\n",
-       "  'from United States',\n",
-       "  'from United States',\n",
-       "  'from United States',\n",
-       "  'from United States',\n",
-       "  'from United States',\n",
-       "  'from United States',\n",
-       "  'from United States',\n",
-       "  'from United States',\n",
-       "  'from United States',\n",
-       "  'from Japan',\n",
-       "  'from Canada',\n",
-       "  'from United States',\n",
-       "  'from Japan']]"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "newitem_list = list(items_list.values())\n",
-    "newitem_list"
+    "# newitem_list = list(items_list.values())\n",
+    "# newitem_list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 22,
    "id": "b84c85d6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Title           0\n",
-      "Price           0\n",
-      "Itemlocation    0\n",
-      "dtype: int64\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df = pd.DataFrame(list(zip(*newitem_list)), columns=cols)\n",
-    "df.dropna(inplace=True)\n",
-    "print(df.isna().sum())\n",
-    "df.reset_index(drop=True, inplace=True)\n",
-    "df.to_csv(\"ps5.csv\", index=False)"
+    "# df = pd.DataFrame(list(zip(*newitem_list)), columns=cols)\n",
+    "# df.dropna(inplace=True)\n",
+    "# df.reset_index(drop=True, inplace=True)\n",
+    "# df.to_csv(\"ps5.csv\", index=False)"
    ]
   },
   {
