--- a/web/web_scraping.ipynb
+++ b/web/web_scraping.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "452d2a30",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "8e1f203c",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "6c086aa2",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "b2b4f8ec",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "ddc55730",
    "metadata": {},
    "outputs": [
@@ -59,7 +59,7 @@
        "b''"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "4f414db8",
    "metadata": {},
    "outputs": [],
@@ -103,30 +103,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "d73dae44",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Title', 'Price', 'Itemlocation']"
+       "['Title', 'Price', 'Location']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "items_to_extract = {\"s-item__title\": \"div\", \"s-item__price\": \"span\", \"s-item__location s-item__itemLocation\": \"span\"}\n",
+    "items_to_extract = {\"s-item__title\": \"div\", \"s-item__price\": \"span\", \"s-item__location\": \"span\"}\n",
     "cols = [i.split(\"__\")[-1].capitalize() for i in list(items_to_extract.keys())]\n",
     "cols"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "e24d90bc",
    "metadata": {},
    "outputs": [
@@ -137,7 +137,7 @@
        " <span class=\"s-item__price\"><!--F#f_0--><!--F#f_0-->$20.00<!--F/--><!--F/--></span>]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "id": "17a32b96",
    "metadata": {},
    "outputs": [],
@@ -159,7 +159,8 @@
     "items_list = defaultdict(list)\n",
     "\n",
     "def get_pages(page):\n",
-    "    page_items = page.select(\"div.s-item__title, span.s-item__price, span.s-item__location\")\n",
+    "    page_str = ','.join([f'{val}.{key}' for key, val in items_to_extract.items()])\n",
+    "    page_items = page.select(page_str)\n",
     "    if len(page_items) == len(items_to_extract):\n",
     "        for item in page_items:\n",
     "            if item.get(\"class\")[0] == \"s-item__title\":\n",
@@ -276,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "id": "caf34f3c",
    "metadata": {},
    "outputs": [
@@ -303,269 +304,112 @@
        "      <th></th>\n",
        "      <th>Title</th>\n",
        "      <th>Price</th>\n",
-       "      <th>Itemlocation</th>\n",
+       "      <th>Location</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Shop on eBay</td>\n",
-       "      <td>20.00</td>\n",
-       "      <td>from Japan</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
        "      <td>PS5 Sony PlayStation 5 Console Disc Version!</td>\n",
        "      <td>449.99</td>\n",
        "      <td>from United States</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>1</th>\n",
        "      <td>New ListingPS5 Sony PlayStation 5 Console Disc...</td>\n",
        "      <td>350.00</td>\n",
        "      <td>from United States</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>2</th>\n",
        "      <td>PlayStation 5 Digital Console Cover Marvels Sp...</td>\n",
        "      <td>174.99</td>\n",
        "      <td>from United States</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>3</th>\n",
        "      <td>PlayStation5 Console Horizon Forbidden West Bu...</td>\n",
        "      <td>499.99</td>\n",
        "      <td>from United States</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
+       "      <th>4</th>\n",
        "      <td>Sony PS5 Blu-Ray Edition Console Spider-Man 2 ...</td>\n",
        "      <td>699.99</td>\n",
        "      <td>from United States</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>SONY PS5 - PLAYSTATION 5 - SYSTEM - DISC - CFI...</td>\n",
-       "      <td>375.00</td>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>63</th>\n",
+       "      <td>Sony PS5 Digital Edition Console - White Comes...</td>\n",
+       "      <td>210.00</td>\n",
        "      <td>from United States</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>PlayStation 5 Digital Edition God of War Ragna...</td>\n",
-       "      <td>459.00</td>\n",
+       "      <th>64</th>\n",
+       "      <td>Sony PlayStation 5 Disc Edition 825GB Home Con...</td>\n",
+       "      <td>340.00</td>\n",
        "      <td>from United States</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>Sony PlayStation 5 825GB Digital Edition Home ...</td>\n",
-       "      <td>375.00</td>\n",
+       "      <th>65</th>\n",
+       "      <td>Sony PS5 Disc Version with all cables, box, of...</td>\n",
+       "      <td>275.00</td>\n",
        "      <td>from United States</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>Sony Playstation 5 Disc Version Console with D...</td>\n",
-       "      <td>507.99</td>\n",
-       "      <td>from United States</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>Sony PS5 Blu-Ray Edition Console - White</td>\n",
-       "      <td>180.50</td>\n",
-       "      <td>from United States</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>Sony PlayStation 5 Digital Edition PS5 Brand N...</td>\n",
-       "      <td>529.00</td>\n",
-       "      <td>from United States</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>New ListingPS5 Console Horizon Forbidden West ...</td>\n",
-       "      <td>356.87</td>\n",
-       "      <td>from United States</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>Sony - PlayStation 5 Console Only - Used - Blu...</td>\n",
-       "      <td>385.89</td>\n",
-       "      <td>from United States</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>Sony Playstation 5 Disc Version with Extra Con...</td>\n",
-       "      <td>563.99</td>\n",
-       "      <td>from United States</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>(READ DESCRIPTION) Sony PlayStation 5 Disc Edi...</td>\n",
-       "      <td>250.00</td>\n",
-       "      <td>from United States</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>Sony Playstation 5 Disc Version (PS5 Disc) Vid...</td>\n",
-       "      <td>197.50</td>\n",
-       "      <td>from United States</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>Sony PS5 Playstation 5 Console Spider-Man 2 Li...</td>\n",
-       "      <td>660.00</td>\n",
-       "      <td>from United States</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>Sony Playstation 5 Disc Version (PS5 Disc) Vid...</td>\n",
-       "      <td>497.99</td>\n",
-       "      <td>from United States</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>Playstation 5 Digital Edition Console (Crashes...</td>\n",
-       "      <td>209.99</td>\n",
-       "      <td>from United States</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>Sony Playstation 5 Disc Edition 825GB White CF...</td>\n",
-       "      <td>250.00</td>\n",
-       "      <td>from United States</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>PlayStation 5 Console - Includes PS5 Console A...</td>\n",
-       "      <td>499.99</td>\n",
-       "      <td>from United States</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>Sony Playstation 5 825GB Console (Disk Version...</td>\n",
-       "      <td>375.00</td>\n",
-       "      <td>from United States</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>Sony PlayStation 5 825GB Digital Console</td>\n",
-       "      <td>350.00</td>\n",
-       "      <td>from United States</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>PlayStation 5 Console FINAL FANTASY XVI - **RE...</td>\n",
-       "      <td>300.00</td>\n",
-       "      <td>from United States</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>Playstation 5 Console Disc Version New</td>\n",
-       "      <td>609.95</td>\n",
-       "      <td>from United States</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>SPIDER-MAN 2  PLAYSTATION 5 DISC CONSOLE COVER...</td>\n",
-       "      <td>284.98</td>\n",
-       "      <td>from United States</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>Playstation 5 Console Disc Version - Brand Spa...</td>\n",
+       "      <th>66</th>\n",
+       "      <td>Sony PS5 Blu-Ray Edition Console - White 825 G...</td>\n",
        "      <td>450.00</td>\n",
-       "      <td>from Japan</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>New Listing(Sony) Playstation5 CFI-1200A01 Used</td>\n",
-       "      <td>693.59</td>\n",
-       "      <td>from Canada</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>PLAYSTATION 5 CONSOLE --**DISC EDITION**-- BRA...</td>\n",
-       "      <td>458.76</td>\n",
        "      <td>from United States</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>30</th>\n",
-       "      <td>Sony PS5 Blu-Ray Edition Console -with 5 Games...</td>\n",
-       "      <td>799.99</td>\n",
+       "      <th>67</th>\n",
+       "      <td>SONY PlayStation Vita PS Vita New Wi-Fi Consol...</td>\n",
+       "      <td>268.99</td>\n",
        "      <td>from Japan</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>68 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "                                                Title   Price  \\\n",
-       "0                                        Shop on eBay   20.00   \n",
-       "1        PS5 Sony PlayStation 5 Console Disc Version!  449.99   \n",
-       "2   New ListingPS5 Sony PlayStation 5 Console Disc...  350.00   \n",
-       "3   PlayStation 5 Digital Console Cover Marvels Sp...  174.99   \n",
-       "4   PlayStation5 Console Horizon Forbidden West Bu...  499.99   \n",
-       "5   Sony PS5 Blu-Ray Edition Console Spider-Man 2 ...  699.99   \n",
-       "6   SONY PS5 - PLAYSTATION 5 - SYSTEM - DISC - CFI...  375.00   \n",
-       "7   PlayStation 5 Digital Edition God of War Ragna...  459.00   \n",
-       "8   Sony PlayStation 5 825GB Digital Edition Home ...  375.00   \n",
-       "9   Sony Playstation 5 Disc Version Console with D...  507.99   \n",
-       "10           Sony PS5 Blu-Ray Edition Console - White  180.50   \n",
-       "11  Sony PlayStation 5 Digital Edition PS5 Brand N...  529.00   \n",
-       "12  New ListingPS5 Console Horizon Forbidden West ...  356.87   \n",
-       "13  Sony - PlayStation 5 Console Only - Used - Blu...  385.89   \n",
-       "14  Sony Playstation 5 Disc Version with Extra Con...  563.99   \n",
-       "15  (READ DESCRIPTION) Sony PlayStation 5 Disc Edi...  250.00   \n",
-       "16  Sony Playstation 5 Disc Version (PS5 Disc) Vid...  197.50   \n",
-       "17  Sony PS5 Playstation 5 Console Spider-Man 2 Li...  660.00   \n",
-       "18  Sony Playstation 5 Disc Version (PS5 Disc) Vid...  497.99   \n",
-       "19  Playstation 5 Digital Edition Console (Crashes...  209.99   \n",
-       "20  Sony Playstation 5 Disc Edition 825GB White CF...  250.00   \n",
-       "21  PlayStation 5 Console - Includes PS5 Console A...  499.99   \n",
-       "22  Sony Playstation 5 825GB Console (Disk Version...  375.00   \n",
-       "23           Sony PlayStation 5 825GB Digital Console  350.00   \n",
-       "24  PlayStation 5 Console FINAL FANTASY XVI - **RE...  300.00   \n",
-       "25             Playstation 5 Console Disc Version New  609.95   \n",
-       "26  SPIDER-MAN 2  PLAYSTATION 5 DISC CONSOLE COVER...  284.98   \n",
-       "27  Playstation 5 Console Disc Version - Brand Spa...  450.00   \n",
-       "28    New Listing(Sony) Playstation5 CFI-1200A01 Used  693.59   \n",
-       "29  PLAYSTATION 5 CONSOLE --**DISC EDITION**-- BRA...  458.76   \n",
-       "30  Sony PS5 Blu-Ray Edition Console -with 5 Games...  799.99   \n",
+       "0        PS5 Sony PlayStation 5 Console Disc Version!  449.99   \n",
+       "1   New ListingPS5 Sony PlayStation 5 Console Disc...  350.00   \n",
+       "2   PlayStation 5 Digital Console Cover Marvels Sp...  174.99   \n",
+       "3   PlayStation5 Console Horizon Forbidden West Bu...  499.99   \n",
+       "4   Sony PS5 Blu-Ray Edition Console Spider-Man 2 ...  699.99   \n",
+       "..                                                ...     ...   \n",
+       "63  Sony PS5 Digital Edition Console - White Comes...  210.00   \n",
+       "64  Sony PlayStation 5 Disc Edition 825GB Home Con...  340.00   \n",
+       "65  Sony PS5 Disc Version with all cables, box, of...  275.00   \n",
+       "66  Sony PS5 Blu-Ray Edition Console - White 825 G...  450.00   \n",
+       "67  SONY PlayStation Vita PS Vita New Wi-Fi Consol...  268.99   \n",
        "\n",
-       "          Itemlocation  \n",
-       "0           from Japan  \n",
+       "              Location  \n",
+       "0   from United States  \n",
        "1   from United States  \n",
        "2   from United States  \n",
        "3   from United States  \n",
        "4   from United States  \n",
-       "5   from United States  \n",
-       "6   from United States  \n",
-       "7   from United States  \n",
-       "8   from United States  \n",
-       "9   from United States  \n",
-       "10  from United States  \n",
-       "11  from United States  \n",
-       "12  from United States  \n",
-       "13  from United States  \n",
-       "14  from United States  \n",
-       "15  from United States  \n",
-       "16  from United States  \n",
-       "17  from United States  \n",
-       "18  from United States  \n",
-       "19  from United States  \n",
-       "20  from United States  \n",
-       "21  from United States  \n",
-       "22  from United States  \n",
-       "23  from United States  \n",
-       "24  from United States  \n",
-       "25  from United States  \n",
-       "26  from United States  \n",
-       "27          from Japan  \n",
-       "28         from Canada  \n",
-       "29  from United States  \n",
-       "30          from Japan  "
+       "..                 ...  \n",
+       "63  from United States  \n",
+       "64  from United States  \n",
+       "65  from United States  \n",
+       "66  from United States  \n",
+       "67          from Japan  \n",
+       "\n",
+       "[68 rows x 3 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
