--- a/sql/sql.ipynb
+++ b/sql/sql.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 45,
    "id": "9cc0c7d9",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 46,
    "id": "b8b59774",
    "metadata": {},
    "outputs": [],
@@ -54,10 +54,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 47,
    "id": "5b65e553",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ProgrammingError",
+     "evalue": "1146 (42S02): Table 'bab.BURGER' doesn't exist",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mMySQLInterfaceError\u001b[0m                       Traceback (most recent call last)",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/mysql/connector/connection_cext.py:633\u001b[0m, in \u001b[0;36mCMySQLConnection.cmd_query\u001b[0;34m(self, query, raw, buffered, raw_as_string)\u001b[0m\n\u001b[1;32m    632\u001b[0m         query \u001b[39m=\u001b[39m query\u001b[39m.\u001b[39mencode(\u001b[39m\"\u001b[39m\u001b[39mutf-8\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m--> 633\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_cmysql\u001b[39m.\u001b[39;49mquery(\n\u001b[1;32m    634\u001b[0m         query,\n\u001b[1;32m    635\u001b[0m         raw\u001b[39m=\u001b[39;49mraw,\n\u001b[1;32m    636\u001b[0m         buffered\u001b[39m=\u001b[39;49mbuffered,\n\u001b[1;32m    637\u001b[0m         raw_as_string\u001b[39m=\u001b[39;49mraw_as_string,\n\u001b[1;32m    638\u001b[0m         query_attrs\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mquery_attrs,\n\u001b[1;32m    639\u001b[0m     )\n\u001b[1;32m    640\u001b[0m \u001b[39mexcept\u001b[39;00m MySQLInterfaceError \u001b[39mas\u001b[39;00m err:\n",
+      "\u001b[0;31mMySQLInterfaceError\u001b[0m: Table 'bab.BURGER' doesn't exist",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[0;31mProgrammingError\u001b[0m                          Traceback (most recent call last)",
+      "\u001b[1;32m/home/blackbird/Desktop/scripts/python/sql/sql.ipynb Cell 4\u001b[0m line \u001b[0;36m2\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/blackbird/Desktop/scripts/python/sql/sql.ipynb#W3sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m cursor\u001b[39m.\u001b[39mreset()\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/blackbird/Desktop/scripts/python/sql/sql.ipynb#W3sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m result \u001b[39m=\u001b[39m cursor\u001b[39m.\u001b[39;49mexecute(\u001b[39m\"\u001b[39;49m\u001b[39mselect * from BURGER\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/mysql/connector/cursor_cext.py:330\u001b[0m, in \u001b[0;36mCMySQLCursor.execute\u001b[0;34m(self, operation, params, multi)\u001b[0m\n\u001b[1;32m    325\u001b[0m             \u001b[39mraise\u001b[39;00m ProgrammingError(\n\u001b[1;32m    326\u001b[0m                 \u001b[39m\"\u001b[39m\u001b[39mNot all parameters were used in the SQL statement\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    327\u001b[0m             )\n\u001b[1;32m    329\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m--> 330\u001b[0m     result \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_cnx\u001b[39m.\u001b[39;49mcmd_query(\n\u001b[1;32m    331\u001b[0m         stmt,\n\u001b[1;32m    332\u001b[0m         raw\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_raw,\n\u001b[1;32m    333\u001b[0m         buffered\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_buffered,\n\u001b[1;32m    334\u001b[0m         raw_as_string\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_raw_as_string,\n\u001b[1;32m    335\u001b[0m     )\n\u001b[1;32m    336\u001b[0m \u001b[39mexcept\u001b[39;00m MySQLInterfaceError \u001b[39mas\u001b[39;00m err:\n\u001b[1;32m    337\u001b[0m     \u001b[39mraise\u001b[39;00m get_mysql_exception(\n\u001b[1;32m    338\u001b[0m         msg\u001b[39m=\u001b[39merr\u001b[39m.\u001b[39mmsg, errno\u001b[39m=\u001b[39merr\u001b[39m.\u001b[39merrno, sqlstate\u001b[39m=\u001b[39merr\u001b[39m.\u001b[39msqlstate\n\u001b[1;32m    339\u001b[0m     ) \u001b[39mfrom\u001b[39;00m \u001b[39merr\u001b[39;00m\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/mysql/connector/opentelemetry/context_propagation.py:77\u001b[0m, in \u001b[0;36mwith_context_propagation.<locals>.wrapper\u001b[0;34m(cnx, *args, **kwargs)\u001b[0m\n\u001b[1;32m     75\u001b[0m \u001b[39m\u001b[39m\u001b[39m\"\"\"Context propagation decorator.\"\"\"\u001b[39;00m\n\u001b[1;32m     76\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m OTEL_ENABLED \u001b[39mor\u001b[39;00m \u001b[39mnot\u001b[39;00m cnx\u001b[39m.\u001b[39motel_context_propagation:\n\u001b[0;32m---> 77\u001b[0m     \u001b[39mreturn\u001b[39;00m method(cnx, \u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[1;32m     79\u001b[0m current_span \u001b[39m=\u001b[39m trace\u001b[39m.\u001b[39mget_current_span()\n\u001b[1;32m     80\u001b[0m tp_header \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/mysql/connector/connection_cext.py:641\u001b[0m, in \u001b[0;36mCMySQLConnection.cmd_query\u001b[0;34m(self, query, raw, buffered, raw_as_string)\u001b[0m\n\u001b[1;32m    633\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_cmysql\u001b[39m.\u001b[39mquery(\n\u001b[1;32m    634\u001b[0m         query,\n\u001b[1;32m    635\u001b[0m         raw\u001b[39m=\u001b[39mraw,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    638\u001b[0m         query_attrs\u001b[39m=\u001b[39m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mquery_attrs,\n\u001b[1;32m    639\u001b[0m     )\n\u001b[1;32m    640\u001b[0m \u001b[39mexcept\u001b[39;00m MySQLInterfaceError \u001b[39mas\u001b[39;00m err:\n\u001b[0;32m--> 641\u001b[0m     \u001b[39mraise\u001b[39;00m get_mysql_exception(\n\u001b[1;32m    642\u001b[0m         err\u001b[39m.\u001b[39merrno, msg\u001b[39m=\u001b[39merr\u001b[39m.\u001b[39mmsg, sqlstate\u001b[39m=\u001b[39merr\u001b[39m.\u001b[39msqlstate\n\u001b[1;32m    643\u001b[0m     ) \u001b[39mfrom\u001b[39;00m \u001b[39merr\u001b[39;00m\n\u001b[1;32m    644\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mAttributeError\u001b[39;00m \u001b[39mas\u001b[39;00m err:\n\u001b[1;32m    645\u001b[0m     addr \u001b[39m=\u001b[39m (\n\u001b[1;32m    646\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_unix_socket \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_unix_socket \u001b[39melse\u001b[39;00m \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_host\u001b[39m}\u001b[39;00m\u001b[39m:\u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_port\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m\n\u001b[1;32m    647\u001b[0m     )\n",
+      "\u001b[0;31mProgrammingError\u001b[0m: 1146 (42S02): Table 'bab.BURGER' doesn't exist"
+     ]
+    }
+   ],
    "source": [
     "cursor.reset()\n",
     "result = cursor.execute(\"select * from BURGER\")"
@@ -1576,7 +1595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 48,
    "id": "6f59f477",
    "metadata": {},
    "outputs": [],
@@ -1587,7 +1606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 49,
    "id": "bc1e7862",
    "metadata": {},
    "outputs": [],
@@ -1600,7 +1619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 50,
    "id": "71aa05ae",
    "metadata": {},
    "outputs": [
@@ -1618,7 +1637,7 @@
        " 'ID']"
       ]
      },
-     "execution_count": 227,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1632,7 +1651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 51,
    "id": "c8e4ab09",
    "metadata": {},
    "outputs": [],
@@ -1642,7 +1661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 52,
    "id": "3478d24b",
    "metadata": {},
    "outputs": [],
@@ -1653,7 +1672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 53,
    "id": "904c7249",
    "metadata": {},
    "outputs": [],
@@ -1664,7 +1683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 54,
    "id": "be87a0d3",
    "metadata": {},
    "outputs": [],
@@ -1674,7 +1693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 55,
    "id": "438a4bea",
    "metadata": {},
    "outputs": [
@@ -1749,7 +1768,7 @@
        "0     1     100.0  None  "
       ]
      },
-     "execution_count": 232,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1760,7 +1779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 56,
    "id": "916d8a7f",
    "metadata": {},
    "outputs": [
@@ -1815,7 +1834,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 233,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1826,7 +1845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 57,
    "id": "f53b3cfe",
    "metadata": {},
    "outputs": [],
@@ -1836,7 +1855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 58,
    "id": "5fccf512",
    "metadata": {},
    "outputs": [],
@@ -1848,7 +1867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 59,
    "id": "e8962627",
    "metadata": {},
    "outputs": [],
@@ -2729,13 +2748,131 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "id": "c35bc0a7",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Subqueries\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "3012d8fd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Cartesian join\n",
+    "# No matching, just multiplying on frst table with second table\n",
+    "# Each record from frst match to all records in the second\n",
+    "# Not frequently used\n",
+    "\n",
+    "pd.read_sql(\"select first_name, last_name, age,item from Customers CROSS JOIN orders;\", con=db)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "22b6c6b9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Inner Join (Frequently used join in SQL)\n",
+    "\n",
+    "# Select only records with matching values in both tables\n",
+    "\n",
+    "pd.read_sql(\"select first_name, last_name, age,item from Customers c INNER JOIN Orders o on c.customer_id = o.customer_id\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a06a514c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Table aliases are so much important when you are joining the table to itself\n",
+    "\n",
+    "# self join\n",
+    "pd.read_sql(\"select a.first_name, b.first_name, a.country from Customers a, Customers b where a.customer_id = b.customer_id and a.country = b.country\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11318f1c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Left join\n",
+    "\n",
+    "# Pull all the records from left table but only pull matching records from right table\n",
+    "# For example, we want all the customers whether or not they places the order\n",
+    "# Null value for non matched records\n",
+    "\n",
+    "pd.read_sql(\"select first_name, last_name, age,item from Customers c LEFT JOIN Orders o on c.customer_id = o.customer_id\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "eee27d9d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Right Join\n",
+    "\n",
+    "# Pull all the records from right table whether or not a customer is associated with the orders\n",
+    "# NUll values for non matching records\n",
+    "pd.read_sql(\"select first_name, last_name, age,item from Customers c LEFT JOIN Orders o on c.customer_id = o.customer_id\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "71374878",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Full Outer join\n",
+    "\n",
+    "# Hey give me everything whether or not there is a match in either of the tables\n",
+    "pd.read_sql(\"select first_name, last_name, age,item from Customers c FULL OUTER JOIN Orders o on c.customer_id = o.customer_id\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37dd246b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Union\n",
+    "\n",
+    "# Combine two select statements together\n",
+    "# Must have same number of columns returned from each select statement\n",
+    "# columns in same order\n",
+    "# aaaga motham elame same uh except entities\n",
+    "\n",
+    "\n",
+    "# Establish business relationships (customer and supplier) - hey we have business relationsips with these many countries\n",
+    "\n",
+    "pd.read_sql(\"select country, age from customers union select country, age from customer2 order by country\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8ffd087d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# String function\n",
+    "\n",
+    "#substr, UPPER, LOWER, UCASE"
    ]
   }
  ],
